# DocuMind-AI

./: .gitignore  ARCHITECTURE.md  ASYNC_CHAT_GUIDE.md  BRANDING_SUMMARY.md  CHECKPOINT.md  CHECKPOINT_STATUS.md  CONTRIBUTING.md  DOCKER_SETUP_GUIDE.md  GITHUB_DESCRIPTION.md  LICENSE  PROJECT_PLAN.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  TEST_FLOW.md  WHATS_NEW.md  docker-compose.yml
client/: Dockerfile  README.md  env.example  index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx
client/src/pages/: ChatPage.tsx  (+2 more)
scripts/: test_deployment.sh
server/: Dockerfile  README.md  alembic.ini  env.example  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: .gitkeep  4859628215bc_initial_migration_users_and_documents_.py  add_async_and_chat_history.py
server/app/: __init__.py  celery_app.py  config.py  database.py  main.py
server/app/api/: dependencies.py
server/app/api/routes/: auth.py  chat.py  upload.py
server/app/middleware/: __init__.py
server/app/models/: __init__.py  chat_history.py  document.py  user.py
server/app/schemas/: __init__.py  auth.py  chat.py  document.py
server/app/services/: auth_service.py  chat_service.py  document_service.py  qdrant_service.py
server/app/tasks/: __init__.py  document_tasks.py
server/app/utils/: embeddings.py  file_parser.py  qdrant_client.py  security.py
server/data/uploads/9f959793-6938-4436-89ff-aac7a2cd5d8e/: 0b86a241-4236-491d-8533-a653bf82ed86.txt  11b947ac-8e32-4720-961e-b522a65a2873.txt  550dcff4-95e6-41e5-bf37-6dd3369e7a3b.txt
server/tests/: __init__.py
(+16 files in other folders)
