[project]
name = "documind-ai"
version = "0.1.0"
description = "DocuMind AI - RAG-powered document Q&A backend"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

